2004-01-16  Mark Mitchell  <mark@codesourcery.com>

	PR c++/13478
	* g++.dg/init/ref10.C: New test.

2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/13407
	* g++.dg/parse/typename6.C: New test.

2004-01-15  Geoffrey Keating  <geoffk@apple.com>

	PR pch/13361
	* testsuite/g++.dg/pch/wchar-1.C: New.
	* testsuite/g++.dg/pch/wchar-1.Hs: New.

2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/9259
	* g++.dg/expr/sizeof2.C: New test.

2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>

	* gcc.dg/sibcall-3.c: Replace mn10?00 with mn10300.

2004-01-15  Alexandre Oliva  <aoliva@redhat.com>

	PR c++/13659
	* g++.dg/lookup/strong-using-3.C: New.
	* g++.dg/lookup/using-10.C: New.

2004-01-15  Alexandre Oliva  <aoliva@redhat.com>

	PR c++/13594
	* g++.dg/lookup/strong-using-2.C: New.

2004-01-15  Marcus Comstedt <marcus@mc.pp.se>
	    Dan Kegel <dank@kegel.com>
	    J"orn Rennecke <joern.rennecke@superh.com>

	PR target/9365
	* gcc.dg/pr9365-1.c: New test.

2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/8856
	* g++.dg/parse/casting-operator2.C: New test.
	* g++.old-deja/g++.pt/explicit83.C: Remove.

2004-01-14  Joseph S. Myers  <jsm@polyomino.org.uk>

	* gcc.dg/label-compound-stmt-1.c: New test.
	* gcc.c-torture/compile/950922-1.c,
	gcc.c-torture/compile/20000211-3.c,
	gcc.c-torture/compile/20000518-1.c,
	gcc.c-torture/compile/20021108-1.c: Avoid labels at and of
	compound statements.

2004-01-14  Hartmut Penner  <hpenner@de.ibm.com>

	* gcc.dg/ppc64-abi-1.c: New test.

2004-01-14  Danny Smith  <dannysmith@users.sourceforge.net>

	 * g++.dg/ext/attrib9.C: Add dg-warnings.

2004-01-14  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/12335
	* g++.dg/parse/dtor3.C: New test.

2004-01-13  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c++/12709
	* g++.dg/parse/try-catch-1.C: New test.

2004-01-13  Arnaud Charlet  <charlet@act-europe.fr>

	* ada/acats/run_all.sh: Add more verbose output in acats.log
	when compiling tests.
